# Multi-agent

./: .gitignore  PostgreSQL 查询手册.txt  README.md  docker-compose.yml  main.py  pyproject.toml
customer_service/: __init__.py  config.py  llm.py  state.py
customer_service/agents/: experts.py  retrieval_node.py  review.py  router.py
customer_service/graph/: visualize.py  workflow.py
customer_service/memory/: facts.py  redis_store.py
customer_service/observability/: __init__.py  langsmith.py
customer_service/persistence/: postgres.py
customer_service/prompts/: __init__.py
customer_service/retrieval/: __init__.py  document_loader.py  hybrid.py  knowledge_base.py  schemas.py
customer_service/scripts/: cleanup_postgres.py  ingest_kb.py
customer_service/services/: chat.py
data/kb/: feedback.jsonl  sales.jsonl  support.jsonl  technical.jsonl
data/workflow/: customer_service_workflow.mmd
multi_agent_customer_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_workflow.py
